Make Bangkok yellow in nav brand across all pages

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <nav class="navbar">
-        <div class="nav-brand"><img src="Logos and pics/logo.jpg" alt="Bangkok Lions Logo" class="nav-logo">Bangkok <span>Lions</span> Rugby Football Club</div>
+        <div class="nav-brand"><img src="Logos and pics/logo.jpg" alt="Bangkok Lions Logo" class="nav-logo"><span>Bangkok</span> <span>Lions</span> Rugby Football Club</div>
         <button class="nav-toggle" aria-label="Toggle menu">&#9776;</button>
         <div class="nav-icons">
             <div class="nav-icon">
