--- a/Logos and pics/sponsors.html
+++ b/Logos and pics/sponsors.html
@@ -9,7 +9,7 @@
 <body>
 
     <nav class="navbar">
-        <div class="nav-brand"><a href="../index.html" style="color: inherit; text-decoration: none; display: flex; align-items: center; gap: 10px;"><img src="logo.jpg" alt="Bangkok Lions Logo" class="nav-logo">Bangkok <span>Lions</span> Rugby Football Club</a></div>
+        <div class="nav-brand"><a href="../index.html" style="color: inherit; text-decoration: none; display: flex; align-items: center; gap: 10px;"><img src="logo.jpg" alt="Bangkok Lions Logo" class="nav-logo"><span>Bangkok</span> <span>Lions</span> Rugby Football Club</a></div>
         <button class="nav-toggle" aria-label="Toggle menu">&#9776;</button>
         <div class="nav-icons">
             <div class="nav-icon">
