--- a/Logos and pics/sponsors.html
+++ b/Logos and pics/sponsors.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sponsors & Partners 2025/26 - Bangkok Lions Rugby Football Club</title>
+    <link rel="icon" type="image/jpeg" href="logo.jfif">
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
