--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bangkok Lions Rugby Football Club</title>
+    <link rel="icon" type="image/jpeg" href="Logos and pics/logo.jfif">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
