Add animated stat counters that count up on scroll

--- a/index.html
+++ b/index.html
@@ -106,19 +106,19 @@
             <h2>About the Club</h2>
             <div class="about-grid">
                 <div class="stat-card">
-                    <span class="stat-number">2010</span>
+                    <span class="stat-number" data-target="2010" data-suffix="">0</span>
                     <span class="stat-label">Founded</span>
                 </div>
                 <div class="stat-card">
-                    <span class="stat-number">20+</span>
+                    <span class="stat-number" data-target="20" data-suffix="+">0</span>
                     <span class="stat-label">Years of Rugby</span>
                 </div>
                 <div class="stat-card">
-                    <span class="stat-number">3-19</span>
+                    <span class="stat-number" data-target="19" data-prefix="3-">0</span>
                     <span class="stat-label">Age Range</span>
                 </div>
                 <div class="stat-card">
-                    <span class="stat-number">57+</span>
+                    <span class="stat-number" data-target="57" data-suffix="+">0</span>
                     <span class="stat-label">Tournament Teams</span>
                 </div>
             </div>
