Make about the club text clickable linking to about us page

--- a/index.html
+++ b/index.html
@@ -122,12 +122,14 @@
                     <span class="stat-label">Tournament Teams</span>
                 </div>
             </div>
-            <p class="about-text">
-                Founded in 2010, the Bangkok Lions Rugby Football Club was established by passionate rugby players
-                and expats with one mission: to promote and develop rugby amongst the Thai and expatriate youth of Bangkok.
-                Over a decade later, we continue to welcome boys and girls from across Bangkok and surrounding areas,
-                building character, confidence, and community through the sport we love.
-            </p>
+            <a href="Logos and pics/about.html" class="about-text-link">
+                <p class="about-text">
+                    Founded in 2010, the Bangkok Lions Rugby Football Club was established by passionate rugby players
+                    and expats with one mission: to promote and develop rugby amongst the Thai and expatriate youth of Bangkok.
+                    Over a decade later, we continue to welcome boys and girls from across Bangkok and surrounding areas,
+                    building character, confidence, and community through the sport we love.
+                </p>
+            </a>
             <div class="about-highlights">
                 <div class="highlight-item">
                     <h3>Leicester Tigers Global Partner</h3>
