Make About the Club heading clickable to about page

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
     <section id="about" class="about">
         <div class="container">
-            <h2>About the Club</h2>
+            <a href="Logos and pics/about.html" class="about-text-link"><h2>About the Club</h2></a>
             <div class="about-grid">
                 <div class="stat-card">
                     <span class="stat-number" data-target="2010" data-suffix="">0</span>
