Add Shop merchandise link to nav and update full address on all pages

--- a/Logos and pics/about.html
+++ b/Logos and pics/about.html
@@ -17,6 +17,7 @@
             <li><a href="about.html" class="nav-active">About Us</a></li>
             <li><a href="sponsors.html">Sponsors</a></li>
             <li><a href="../index.html#contact">Contact Us</a></li>
+            <li><a href="https://x-tremerugbywear.com/product-category/bangkok-lions/" target="_blank">Shop</a></li>
         </ul>
     </nav>
 
@@ -126,7 +127,7 @@
                     <div class="training-details">
                         <div class="training-detail-item">
                             <svg viewBox="0 0 24 24" fill="none" width="20" height="20"><path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7z" fill="var(--blue)"/><circle cx="12" cy="9" r="2.5" fill="#fff"/></svg>
-                            <span>Bangkok Patana Sports Complex, La Salle Road, Bangna</span>
+                            <span>Bangkok Patana Sports Complex, 9 2/9 Soi Lasalle 36, Bang Na Tai, Bang Na, Bangkok 10260</span>
                         </div>
                         <div class="training-detail-item">
                             <svg viewBox="0 0 24 24" fill="none" width="20" height="20"><circle cx="12" cy="12" r="9" stroke="var(--blue)" stroke-width="2"/><path d="M12 7V12L15 15" stroke="var(--blue)" stroke-width="2" stroke-linecap="round"/></svg>
