--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <li><a href="Logos and pics/about.html">About Us</a></li>
             <li><a href="Logos and pics/sponsors.html">Sponsors</a></li>
             <li><a href="#contact">Contact Us</a></li>
+            <li><a href="https://x-tremerugbywear.com/product-category/bangkok-lions/" target="_blank">Shop</a></li>
         </ul>
     </nav>
 
@@ -177,7 +178,7 @@
     <section id="find-us" class="find-us">
         <div class="container">
             <h2>Find Us</h2>
-            <p class="find-us-subtitle">Bangkok Patana Sports Complex, La Salle Road, Bangna, Bangkok</p>
+            <p class="find-us-subtitle">Bangkok Patana Sports Complex, 9 2/9 Soi Lasalle 36, Bang Na Tai, Bang Na, Bangkok 10260</p>
             <div class="map-wrapper">
                 <iframe
                     src="https://www.google.com/maps?q=Bangkok+Patana+School+Sport+Complex,+Bang+Na,+Bangkok&output=embed"
