--- a/Logos and pics/sponsors.html
+++ b/Logos and pics/sponsors.html
@@ -17,6 +17,7 @@
             <li><a href="about.html">About Us</a></li>
             <li><a href="sponsors.html" class="nav-active">Sponsors</a></li>
             <li><a href="../index.html#contact">Contact Us</a></li>
+            <li><a href="https://x-tremerugbywear.com/product-category/bangkok-lions/" target="_blank">Shop</a></li>
         </ul>
     </nav>
 
