Replace tournament card with community charity work fact

--- a/index.html
+++ b/index.html
@@ -139,10 +139,10 @@
                     rugby camps to Thailand.</p>
                 </div>
                 <div class="highlight-item">
-                    <h3>Bangkok Lions Rugby Asia Tournament</h3>
-                    <p>Since our inaugural tournament in 2005, we've hosted the Bangkok Lions Rugby Asia Tournament,
-                    attracting over 850 players aged 4-18 from 57+ teams across the region. It's one of Southeast
-                    Asia's premier youth rugby events.</p>
+                    <h3>Giving Back to the Community</h3>
+                    <p>Beyond the pitch, we're committed to making a difference. Through our partnership with the Kids Ark Foundation,
+                    we donate boots, shirts, and equipment to underprivileged children, using rugby as a vehicle for positive change
+                    across Thailand.</p>
                 </div>
             </div>
         </div>
