Add The Clubhouse as sponsor on sponsors page

--- a/Logos and pics/sponsors.html
+++ b/Logos and pics/sponsors.html
@@ -127,6 +127,17 @@
                 </div>
             </a>
 
+            <a id="clubhouse" href="https://theclubhousebangkok.com/" target="_blank" rel="noopener" class="sponsor-detail-card">
+                <div class="sponsor-detail-logo">
+                    <span class="sponsor-text-logo">The Clubhouse</span>
+                </div>
+                <div class="sponsor-detail-text">
+                    <h3>The Clubhouse</h3>
+                    <span class="sponsor-tag">Long-Standing Partner</span>
+                    <p>A long-standing partner of the Bangkok Lions, The Clubhouse has supported our community for years. Known for great food, a welcoming atmosphere, and a passion for sport, it remains a favourite gathering spot for players, parents, and supporters. Their continued commitment to the club reflects the spirit of friendship and community that defines the Lions.</p>
+                </div>
+            </a>
+
             <a id="monsoonvalley" href="https://www.monsoonvalley.com/en" target="_blank" rel="noopener" class="sponsor-detail-card">
                 <div class="sponsor-detail-logo">
                     <img src="Monsoon_Valley-e1767325957445-300x127.jpg" alt="Monsoon Valley">
