Add Clubhouse logo to sponsors page and main page sponsor grid

--- a/Logos and pics/sponsors.html
+++ b/Logos and pics/sponsors.html
@@ -129,7 +129,7 @@
 
             <a id="clubhouse" href="https://theclubhousebangkok.com/" target="_blank" rel="noopener" class="sponsor-detail-card">
                 <div class="sponsor-detail-logo">
-                    <span class="sponsor-text-logo">The Clubhouse</span>
+                    <img src="The_Clubhouse_White-e1767326586582-300x82.jpeg" alt="The Clubhouse">
                 </div>
                 <div class="sponsor-detail-text">
                     <h3>The Clubhouse</h3>
