--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
                 <a href="Logos and pics/sponsors.html#lawtonasia" class="sponsor-card-link"><div class="sponsor-card"><img src="Logos and pics/sponsor-oryx.jfif" alt="LawtonAsia"></div></a>
                 <a href="Logos and pics/sponsors.html#medconsult" class="sponsor-card-link"><div class="sponsor-card"><img src="Logos and pics/MedConsult_White_Removed-300x212.png" alt="MedConsult Clinic" class="sponsor-img-lg"></div></a>
                 <a href="Logos and pics/sponsors.html#monsoonvalley" class="sponsor-card-link"><div class="sponsor-card"><img src="Logos and pics/Monsoon_Valley-e1767325957445-300x127.jpg" alt="Monsoon Valley"></div></a>
+                <a href="Logos and pics/sponsors.html#clubhouse" class="sponsor-card-link"><div class="sponsor-card"><img src="Logos and pics/The_Clubhouse_White-e1767326586582-300x82.jpeg" alt="The Clubhouse"></div></a>
             </div>
         </div>
     </section>
