Link Clubhouse sponsor card to Facebook page

--- a/Logos and pics/sponsors.html
+++ b/Logos and pics/sponsors.html
@@ -127,7 +127,7 @@
                 </div>
             </a>
 
-            <a id="clubhouse" href="https://theclubhousebangkok.com/" target="_blank" rel="noopener" class="sponsor-detail-card">
+            <a id="clubhouse" href="https://www.facebook.com/clubhousebkk/" target="_blank" rel="noopener" class="sponsor-detail-card">
                 <div class="sponsor-detail-logo">
                     <img src="The_Clubhouse_White-e1767326586582-300x82.jpeg" alt="The Clubhouse">
                 </div>
